--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
-version: '3.7'  # Using 3.7 is fine, ignore the warning about 'version'
+version: '3'
 services:
+
+  # Build app from Dockerfile in same folder
   app:
     build: .
 
+  # Build the db as name db from the Dockerfile in the db folder
+  # exposing the port if we want to run code outside a container
   db:
-    build: ./db/world # <-- Correct path to Dockerfile
-    restart: always
+    build: db/.
     ports:
       - "33060:3306"
-    environment:        # <-- Important: Pass credentials to the database container
-      MYSQL_ROOT_PASSWORD: example
-      MYSQL_DATABASE: world
