--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,35 @@
-name: A workflow for Group 1 App
+name: A workflow for my App
 on: push
 
 jobs:
-  build:
-    name: Group 1 action
+  UnitTests:
+    name: Unit Test Build Action
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'adopt'
-      - name: Compile with Maven
-        run: mvn compile
-        working-directory: ${{ github.workspace }}
-      - name: Build Docker Image
-        run: docker build -t devopsimage .
-      - name: Run image
-        run: docker run --name devopscontainer -d devopsimage
+      - name: Unit Tests
+        run: mvn -Dtest=com.napier.sem.MyTest test
+
+  Build:
+    name: Build and Start Using docker-compose
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+      - name: Package and Run docker compose
+        run: |
+          mvn package -DskipTests
+          docker compose up --abort-on-container-exit
       - name: view logs
-        run: docker logs devopscontainer
+        run: docker logs sem-quick-cw-app-1
