--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,13 +1,5 @@
-# Use the latest MySQL image
 FROM mysql/mysql-server:latest
-# Set the working directory
-WORKDIR /tmp
-# Copy all the files to the working directory of the container
-COPY world/*.sql /tmp/
-# Copy the main SQL file to docker-entrypoint-initdb.d.
-# Scripts and SQL files in this folder are executed on container startup.
-# This is specific to MySQL.
-COPY world/world.sql /docker-entrypoint-initdb.d
-# Set the root password
+COPY world.sql /docker-entrypoint-initdb.d
 ENV MYSQL_ROOT_PASSWORD example
+#Mac Fix
 ENV MYSQL_ROOT_HOST=%
