--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,5 +1,6 @@
 FROM mysql/mysql-server:latest
 COPY world.sql /docker-entrypoint-initdb.d
-ENV MYSQL_ROOT_PASSWORD example
-#Mac Fix
+# USE THE CORRECT VARIABLE FOR INITIAL ROOT PASSWORD
+ENV MYSQL_ROOT_PASSWORD=example
+# Mac Fix - This is generally fine, but not the cause of the failure
 ENV MYSQL_ROOT_HOST=%
