--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,10 @@ services:
   app:
     build: .
 
-  # Build the db as name db from the Dockerfile in the db folder
+  # Build the db as name world from the Dockerfile in the db folder
   # exposing the port if we want to run code outside a container
   db:
     build: db/.
     ports:
       - "33060:3306"
+
