--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,21 @@
 version: '3'
-services:
 
-  # Build app from Dockerfile in same folder
+services:
   app:
     build: .
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      - internal-network
 
-  # Build the db as name world from the Dockerfile in the db folder
-  # exposing the port if we want to run code outside a container
   db:
     build: db/.
     ports:
       - "33060:3306"
+    networks:
+      - internal-network
 
+networks:
+  internal-network:
+    driver: bridge
